szihkcal: add github URL

--- a/js/szihkcal/index.html
+++ b/js/szihkcal/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <!--
+        Source code: https://github.com/vmiklos/vmexam/tree/master/js/szihkcal
         Usage: /?seed=value - seeds random with the provided value
         -->
         <style>
