addr-osmify-js: stub event handler

--- a/osm/addr-osmify-js/index.html
+++ b/osm/addr-osmify-js/index.html
@@ -9,6 +9,10 @@
         <script src="bundle.js"></script>
     </head>
     <body>
+    <p>Takes an OSM way ID and turns it into a string that is readable and
+    e.g. OsmAnd can parse it as well.</p>
+    <p><input type="text" placeholder="URL"/> <input type="button" value="osmify" onclick="osmify();"/></p>
+    <p>Example URL: http://www.openstreetmap.org/node/2700453924</p>
     </body>
 </html>
 <!-- vim: shiftwidth=4 softtabstop=4 expandtab:
