addr-osmify-js: access url field

--- a/osm/addr-osmify-js/index.html
+++ b/osm/addr-osmify-js/index.html
@@ -11,7 +11,7 @@
     <body>
     <p>Takes an OSM way ID and turns it into a string that is readable and
     e.g. OsmAnd can parse it as well.</p>
-    <p><input type="text" placeholder="URL"/> <input type="button" value="osmify" onclick="osmify();"/></p>
+    <p><input id="url-input" type="text" placeholder="URL"/> <input type="button" value="osmify" onclick="osmify();"/></p>
     <p>Example URL: http://www.openstreetmap.org/node/2700453924</p>
     </body>
 </html>
