--- a/osm/addr-osmify-js/index.html
+++ b/osm/addr-osmify-js/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/osm/addr-osmify-js
+        Usage: /?url=value - pre-fill the input field with the provided value
         -->
         <title>addr-osmify-js</title>
         <script src="bundle.js"></script>
