addr-osmify-js: show the result

--- a/osm/addr-osmify-js/index.html
+++ b/osm/addr-osmify-js/index.html
@@ -12,7 +12,8 @@
     <body>
     <p>Takes an OSM way ID and turns it into a string that is readable and
     e.g. OsmAnd can parse it as well.</p>
-    <p><input id="url-input" type="text" placeholder="URL"/> <input type="button" value="osmify" onclick="osmify();"/></p>
+    <p><input id="url-input" type="text" placeholder="URL" size="64"/> <input type="button" value="osmify" onclick="osmify();"/></p>
+    <p>Result: <input id="output" type="text" size="64"/></p>
     <p>Example URL: http://www.openstreetmap.org/node/2700453924</p>
     </body>
 </html>
