--- a/js/mid/index.html
+++ b/js/mid/index.html
@@ -6,7 +6,7 @@
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/mid
         -->
         <title>mid</title>
-        <script src="bundle.js"></script>
+        <script src="bundle.js" type="text/javascript"></script>
     </head>
     <body>
     </body>
