hungary-housenumbers-progressbar: don't zoom out on mobile

--- a/osm/qa/hungary-housenumbers-progressbar/index.html
+++ b/osm/qa/hungary-housenumbers-progressbar/index.html
@@ -4,6 +4,7 @@
 	<title>Housenumber stats: Hungary</title>
 	<script src="Chart.min.js"></script>
 	<script src="jquery.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 	<div style="width: 75%;">
