link source code

--- a/osm/qa/hungary-housenumbers-progressbar/index.html
+++ b/osm/qa/hungary-housenumbers-progressbar/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
 <head>
+	<!--
+	 Source code:
+	 https://github.com/vmiklos/vmexam/tree/master/osm/qa/hungary-housenumbers-progressbar
+	-->
 	<title>Housenumber stats: Hungary</title>
 	<script src="Chart.min.js"></script>
 	<script src="jquery.min.js"></script>
