hungary-housenumbers-progressbar: prepare for future l10n

--- a/osm/qa/hungary-housenumbers-progressbar/index.html
+++ b/osm/qa/hungary-housenumbers-progressbar/index.html
@@ -37,7 +37,7 @@ $.getJSON(progressJSON, function(progress) {
         options: {
             title: {
                 display: true,
-                text: progress.title,
+                text: "Coverage as of " + progress.date,
             },
             scales: {
                 xAxes: [{
