hungary-housenumbers-progressbar: more refactor to allow multiple charts

--- a/osm/qa/hungary-housenumbers-progressbar/index.html
+++ b/osm/qa/hungary-housenumbers-progressbar/index.html
@@ -15,8 +15,9 @@
 		<canvas id="progress"></canvas>
 	</div>
 	<script>
-var progressJSON = "/osm/housenumber-stats/hungary/stats.json";
-$.getJSON(progressJSON, function(progress) {
+var statsJSON = "/osm/housenumber-stats/hungary/stats.json";
+$.getJSON(statsJSON, function(stats) {
+    var progress = stats.progress;
     var progressData = {
         labels: [progress.percentage + "%"],
         datasets: [{
