housenumber-stats-hungary: limit width tweak to non-mobile
If the height is too large, the chart is not visible on a 16:9 display.

If the width is too small, it's not readable on mobile. Hopefully this
is a better compromise.

--- a/osm/qa/housenumber-stats-hungary/index.html
+++ b/osm/qa/housenumber-stats-hungary/index.html
@@ -11,12 +11,16 @@
     <script src="jquery.min.js"></script>
     <style>
 div.canvasblock {
-    width: 75%;
     margin: auto;
     margin-top: 5px;
     margin-bottom: 5px;
     border: 1px solid #7f7f7f;
     padding: 5px;
+}
+@media screen and (min-width: 1024px) {
+    div.canvasblock {
+        width: 75%;
+    }
 }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
