housenumber-stats-hungary: have more data now

--- a/osm/qa/housenumber-stats-hungary/index.html
+++ b/osm/qa/housenumber-stats-hungary/index.html
@@ -80,7 +80,7 @@ $.getJSON(statsJSON, function(stats) {
         options: {
             title: {
                 display: true,
-                text: "New house numbers, last 6 days, as of " + progress.date,
+                text: "New house numbers, last week, as of " + progress.date,
             },
             scales: {
                 xAxes: [{
