--- a/js/missing-housenumbers/index.html
+++ b/js/missing-housenumbers/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <!--
+        Source code: https://github.com/vmiklos/vmexam/tree/master/js/missing-housenumbers
+        -->
         <title>missing-housenumbers</title>
         <script src="bundle.js"></script>
     </head>
