osm/missing-housenumbers: swap the default to leaflet

--- a/js/missing-housenumbers/index.html
+++ b/js/missing-housenumbers/index.html
@@ -8,7 +8,7 @@
         <title>missing-housenumbers</title>
         <script src="bundle.js"></script>
     </head>
-    <link rel="stylesheet" href="ol.css" type="text/css">
+    <link rel="stylesheet" href="leaflet.css">
     <style>
       html, body {
         margin: 0;
