private-pois: fix mobile view

--- a/js/private-pois/index.html
+++ b/js/private-pois/index.html
@@ -5,6 +5,7 @@
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/private-pois
         -->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>private-pois</title>
         <script src="bundle.js"></script>
     </head>
