js, szavak: add confetti with a timeout

--- a/js/szavak/index.html
+++ b/js/szavak/index.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8" />
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/szavak
+        Usage: /?path=szavak.json&filter=1&confetti=600
+        - path: json array / word list
+        - filter: limit words to already known letters
+        - confetti: amount of timeout between two confettis
         -->
         <title>szavak</title>
         <script src="bundle.js" type="text/javascript"></script>
