--- a/js/szavak/index.html
+++ b/js/szavak/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/szavak
         Usage: /?path=szavak.json&filter=1&confetti=600
