js, szamolo: update doc

--- a/js/szamolo/index.html
+++ b/js/szamolo/index.html
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/szamolo
-        Usage: /?junior=1
+        Usage:
+        - level 4 (hardest): no parameters
+        - level 3: /?senior=1 or /?20230429=1
+        - level 2 (easiest): /?junior=1
         Idea from: https://www.radiolocman.com/shem/schematics.html?di=44965
         -->
         <title>szamolo</title>
