js, geniusz: move l10n strings out of main.ts

--- a/js/geniusz/index.html
+++ b/js/geniusz/index.html
@@ -10,6 +10,28 @@
         <script src="bundle.js" type="text/javascript"></script>
     </head>
     <body>
+        <h1>párbaj témakörei</h1>
+        <ul>
+            <li>első játszma: <span id="topic0"></span>, <span id="topic1"></span>, <span id="topic2"></span></li>
+            <li>második játszma: <span id="topic3"></span>, <span id="topic4"></span>, <span id="topic5"></span></li>
+            <li>harmadik játszma: <span id="topic6"></span>, <span id="topic7"></span>, <span id="topic8"></span></li>
+            <li>kimarad: <span id="topic9"></span></li>
+        </ul>
+        <input id="topicsButton" type="button" value="új téma sorrend"/>
+
+        <h1>téma kérdés</h1>
+        <ul>
+            <li>kérdéssor: <span id="seriesId"></span></li>
+            <li>kérdés: <span id="seriesQuestionId"></span></li>
+        </ul>
+        <input id="seriesButton" type="button" value="új téma kérdés"/>
+
+        <h1>vegyes kérdés</h1>
+        <ul>
+            <li>kérdéssor: <span id="genericId"></span></li>
+            <li>kérdés: <span id="genericQuestionId"></span></li>
+        </ul>
+        <input id="genericButton" type="button" value="új téma kérdés"/>
     </body>
 </html>
 <!-- vim: shiftwidth=4 softtabstop=4 expandtab:
