urlify: fix mobile zoom

--- a/js/urlify/index.html
+++ b/js/urlify/index.html
@@ -5,6 +5,7 @@
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/urlify
         -->
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>urlify</title>
         <script src="bundle.js" type="text/javascript"></script>
     </head>
