--- a/js/rubik-scramble/index.html
+++ b/js/rubik-scramble/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!--
-        Source code: https://github.com/vmiklos/vmexam/tree/master/js/rubikscramble
+        Source code: https://github.com/vmiklos/vmexam/tree/master/js/rubik-scramble
         -->
-        <title>rubikscramble</title>
+        <title>rubik-scramble</title>
         <script src="bundle.js" type="text/javascript"></script>
     </head>
     <body>
