--- a/js/missing-housenumbers/index.html
+++ b/js/missing-housenumbers/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/missing-housenumbers
         -->
         <title>missing-housenumbers</title>
-        <script src="bundle.js"></script>
+        <script src="bundle.js" type="text/javascript"></script>
     </head>
     <link rel="stylesheet" href="leaflet.css">
     <style>
