--- a/js/rubik/index.html
+++ b/js/rubik/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/rubik
         Usage: /?faces=ULFLULURBRULDRFDUBRDUBFLBDRUBFDDBBUDFFFFLRRFLDBLUBRLRD
         - faces: a facelet string, so you don't have to paint the cubes manually
         -->
         <title>rubik</title>
-        <script src="bundle.js"></script>
+        <script src="bundle.js" type="text/javascript"></script>
     </head>
     <body>
     </body>
