--- a/js/szavak/index.html
+++ b/js/szavak/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="color-scheme" content="light dark"/>
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/szavak
         Usage: /?path=szavak.json&filter=1&confetti=600
