js, szihkcal: update dependencies (2025)

--- a/js/szihkcal/index.html
+++ b/js/szihkcal/index.html
@@ -16,7 +16,7 @@
         }
         </style>
         <title>SZIHK naptár</title>
-        <script src="bundle.js"></script>
+        <script src="bundle.js" type="text/javascript"></script>
     </head>
     <body>
     </body>
