--- a/js/urlify/index.html
+++ b/js/urlify/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="color-scheme" content="light dark"/>
         <!--
         Source code: https://github.com/vmiklos/vmexam/tree/master/js/urlify
         -->
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>urlify</title>
         <script src="bundle.js" type="text/javascript"></script>
     </head>
